--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    list-style: none;
+    text-decoration: none;
 }
 
 body {
@@ -20,7 +22,7 @@ header {
     position: relative;
     width: 80%;
     height: 90%;
-    border: 1px solid #fff;
+    /* border: 1px solid #fff; */
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 10px 25px -8px #000;
@@ -56,8 +58,221 @@ header video {
 header nav {
     width: 100%;
     height: 10%;
-    border: 1px solid #fff;
+    /* border: 1px solid #fff; */
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 0px 50px;
 }
+
+header nav .logo_ul  {
+    display: flex;
+    align-items: center;
+    justify-content: center;   
+}
+
+header nav .logo_ul img {
+    width: 90px;    
+}
+
+
+header nav .logo_ul ul  {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+header nav .logo_ul ul  li {
+    padding: 3px 5px;
+}
+
+header nav .logo_ul ul  li a {
+    color: #fff;
+    font-size: 1rem;
+    font-weight: bold;
+    transition: .3s linear;
+}
+
+header nav .logo_ul ul  li a:hover {
+    color: rgb(255, 255, 255, .7);
+}
+
+header nav .search_user  {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+header nav .search_user input {
+    padding: 3px 10px;
+    border-radius: 20px;
+    border: none;
+    outline: none;
+    background: rgb(255, 255, 255, .3);
+    color: #fff;
+    margin-right: 10px;
+}
+
+header nav .search_user input::placeholder {
+    color: #fff;
+}
+
+header nav .search_user input::placeholder {
+    color: #fff;
+}
+
+header nav .search_user img {
+    width: 23px;
+    height: 23px;
+    border-radius: 50%;
+}
+
+header nav .search_user .search {
+    position: absolute;
+    width: 320px;
+    height: 270px;
+    /* border: 1px solid #fff; */
+    right: 0;
+    top: 40px;
+    z-index: 99999;
+    overflow-y: auto;
+}
+
+header nav .search_user .search::-webkit-scrollbar {
+    width: 5px;
+    background-color: rgb(255, 255, 255, .3);
+    border-radius: 5px;
+    visibility: hidden;
+}
+
+header nav .search_user .search::-webkit-scrollbar-thumb {
+    width: 5px;
+    background-color: rgb(255, 255, 255, .4);
+    border-radius: 5px;
+    visibility: hidden;
+}
+
+header nav .search_user .search:hover::-webkit-scrollbar {
+    visibility: visible;
+}
+
+header nav .search_user .search:hover::-webkit-scrollbar-thumb {
+    visibility: visible;
+}
+
+header nav .search_user .search .card {
+    position: relative;
+    width: 100%;
+    height: 50%;
+    display: flex;
+    align-items: center;
+    margin-bottom: 5px;
+    padding: 3px 0px;
+    display: none;
+}
+
+header nav .search_user .search .card::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgb(255, 255, 255, .1);
+    backdrop-filter: blur(5px);
+    border-radius: 5px;
+    z-index: -1;
+}
+
+header nav .search_user .search .card img {
+    width: 28%;
+    height: 90%;
+    border-radius: 2px;
+    margin-left: 8px;
+}
+
+header nav .search_user .search .card .cont{
+    margin-left: 10px;
+    color: #fff;
+}
+
+header nav .search_user .search .card .cont h3{
+    font-size: 1.3rem;
+    line-height: 25px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 250px;
+}
+
+header nav .search_user .search .card .cont p{
+    font-size: 1rem;
+    color: rgb(255, 255, 255, .8);
+}
+
+header nav .search_user .search .card .cont span{
+    background: yellow;
+    color: #000;
+    padding: 0px 3px;
+    margin: 0px 5px 0px 10px;
+    font-weight: 500;
+}   
+
+header .content{
+    position: relative;
+    color: #fff;
+    margin-top: 50px;
+    padding-left: 50px;
+}   
+
+header .content h1{
+    font-size: 2.5rem;
+}   
+
+header .content p{
+    font-size: 1rem;
+    width: 350px;
+    word-break: break-all;
+}   
+
+header .content .details{
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+}   
+
+header .content .details h6{
+   color: rgb(255, 255, 255, .8);
+   font-size: .8rem;
+   margin-right: 10px;
+}   
+
+header .content .details h5{
+   color: rgb(142, 230, 48);
+   font-size: .8rem;
+   margin-right: 10px;
+}   
+
+header .content .details h4{
+   color: #fff;
+   font-size: .8rem;
+   margin-right: 10px;
+}   
+
+header .content .details h3{
+   color: #fff;
+   display: flex;
+   align-items: center;
+   font-size: .8rem;
+}   
+
+header .content .details h3 span{
+  background: yellow;
+  color: #000;
+  padding: 0px 3px;
+  margin: 0xp 5px 0px 5px;
+  font-weight: 500;
+}   
+
+header .content .details h3 i{
+  margin-right: 5px;
+}   
