--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ header::before {
     position: absolute;
     width: 100%;
     height: 100%;
-    background: url('img/money\ heist1.jpg') no-repeat center center/cover;
+    /* background: url('img/money\ heist1.jpg') no-repeat center center/cover; */
     opacity: .6;
     z-index: -1;
 }
@@ -462,3 +462,63 @@ header section:hover .bi-chevron-right {
 header section:hover .bi-chevron-left {
     opacity: 1;
 }
+
+
+@media screen and (max-width: 1200px) {
+    header .video {
+        display: none;
+    }
+
+    header .content .btns {
+        margin-top: 5px;
+    }
+
+    header .content .btns a{
+        font-size: .8rem;
+    }
+}
+
+@media screen and (max-width: 820px) {
+    header nav {
+        display: inline-table;
+    }
+}
+
+@media screen and (max-width: 510px) {
+    header nav .search_user input {
+        display: none;
+    }
+
+    header nav .search_user img {
+        display: none;
+    }
+
+    header .content p {
+        display: none;
+    }
+
+    header nav .logo_ul ul  li a {
+        font-size: .9rem;
+    }
+
+    header .content .btns {
+        margin: 23px;
+    }
+
+    header .content .btns a{
+        font-size: .8rem;
+    }
+}
+
+@media screen and (max-width: 462px) {
+    header nav .logo_ul {
+        display: none;
+    }
+
+    header nav .search_user input {
+        display: flex;
+    }
+}
+
+
+
