--- a/style.css
+++ b/style.css
@@ -464,61 +464,48 @@ header section:hover .bi-chevron-left {
 }
 
 
-@media screen and (max-width: 1200px) {
-    header .video {
-        display: none;
-    }
-
-    header .content .btns {
-        margin-top: 5px;
-    }
-
-    header .content .btns a{
-        font-size: .8rem;
+@media screen and (max-width: 1250px) {
+    header video {
+        position: absolute;
+        width: 200%;
+        height: 180%;
     }
 }
 
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 788px) {
+    header {
+        width: 100%;
+        height: 100%;
+    }
     header nav {
-        display: inline-table;
+        padding: 0px 10px;
+        height: 15%;
+    }
+    header nav .logo_ul ul {
+        position: absolute;
+        top: 0px;
+        left: 10px;
+    }
+    header nav .logo_ul ul li{
+        padding: 3px 5px;
+    }
+    header nav .logo_ul ul li a{
+        font-size: 10px;
+    }
+    header .content {
+        padding-left: 10px;
+    }
+    header section {
+        padding: 0px 10px;
     }
 }
-
-@media screen and (max-width: 510px) {
-    header nav .search_user input {
-        display: none;
+@media screen and (max-width: 788px) {
+    header video {
+        position: absolute;
+        width: 520%;
+        height: 180%;
     }
-
-    header nav .search_user img {
-        display: none;
-    }
-
-    header .content p {
-        display: none;
-    }
-
-    header nav .logo_ul ul  li a {
-        font-size: .9rem;
-    }
-
-    header .content .btns {
-        margin: 23px;
-    }
-
-    header .content .btns a{
-        font-size: .8rem;
-    }
-}
-
-@media screen and (max-width: 462px) {
-    header nav .logo_ul {
-        display: none;
-    }
-
-    header nav .search_user input {
-        display: flex;
-    }
-}
+} 
 
 
 
